Added GQSP circuit schematics

--- a/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
@@ -486,9 +486,11 @@
     "\n",
     "Why does this generalization matter so much? It allows for mixed parity polynomial, resulting in you being to implement functions like $e^{-iAt}$ directly without splitting them into sine (odd) and cosine (even) components.\n",
     "\n",
-    "Apart from that, finding phase factors for standard QSVT is often a hard optimization problem scaling as $\\tilde{O}(d^2)$. In the Generalized (GQSP) framework, phases can often be computed in linear time $\\tilde{O}(d)$, making it significantly more practical for more quantum resource heavy application.\n",
+    "Apart from that, finding phase factors for standard QSVT is often a hard optimization problem scaling as $\\tilde{O}(d^2)$. In the Generalized (GQSP) framework, phases can often be computed in linear time $\\tilde{O}(d)$, making it significantly more practical for more quantum resource heavy application. This can also be see through the underlying circuit, which simplifies to the following schematics:\n",
     "\n",
-    "Ok, enough of this, let's now show how you can use, run, simulate, and provide resource analysis for there kinds of algorithms."
+    "![Alt text](GQSP.png)\n",
+    "\n",
+    "Ok, enough of this, let's now show how you can use, run, simulate, and provide resource analysis for three GQSP based applications."
    ]
   },
   {
