--- a/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
@@ -498,7 +498,7 @@
    "id": "26536a3c",
    "metadata": {},
    "source": [
-    "## QSP with Qrisp: ``.poly``, ``.inv``, and ``.sim``\n",
+    "## GQSP with Qrisp: ``.poly``, ``.inv``, and ``.sim``\n",
     "\n",
     "### Polynomial transformations: ``.poly``\n",
     "\n",
