Fix typo in GQSP_filtering.ipynb regarding state notation

--- a/documentation/source/general/tutorial/GQSP_filtering.ipynb
+++ b/documentation/source/general/tutorial/GQSP_filtering.ipynb
@@ -288,7 +288,7 @@
     "However, if the observed energy lies within the spectral gap $\\Delta=\\lambda_1-\\lambda_0$ of the ground state energy $\\lambda_0$, we can use the following observation:\n",
     "\n",
     "Suppose that the state $\\ket{\\psi}$ has overlap with only the ground state and the first excited state, i.e., \n",
-    "$\\ket{\\psi} = \\alpha_0\\ket{\\lambda_0} + \\alpha_1\\ket{\\psi_1}$. Then the energy $E$ evaluates to \n",
+    "$\\ket{\\psi} = \\alpha_0\\ket{\\lambda_0} + \\alpha_1\\ket{\\lambda_1}$. Then the energy $E$ evaluates to \n",
     "\n",
     "$$ E = \\langle\\psi|H|\\psi\\rangle = \\langle\\psi|\\sum_i\\lambda_i\\ket{\\lambda_i}\\bra{\\lambda_i}|\\psi\\rangle = |\\alpha_0|^2\\lambda_0 + |\\alpha_1|^2\\lambda_1 $$\n",
     "\n",
