Addressed Diego's review comments for BE_vol2

--- a/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
@@ -7,11 +7,11 @@
    "source": [
     "# BlockEncoding class 201: Qubitization, Chebyshev polynomials, QSP\n",
     "\n",
-    "Welcome back to the tutorial on Quantum Linear Algebra. In the previous tutorial, we learned how to \"embed\" a non-unitary matrix $A$ in the top left block a larger unitary $U$ using the [BlockEncoding class](../../../reference/Block%20Encodings/BlockEncoding.rst). But just having $A$ block encoded usually isn't enough. \n",
+    "Welcome back to the tutorial on Quantum Linear Algebra. In the previous tutorial, we learned how to \"embed\" a non-unitary matrix $A$ in the top left block of a larger unitary $U$ using the [BlockEncoding class](../../../reference/Block%20Encodings/BlockEncoding.rst). But just having $A$ block encoded usually isn't enough. \n",
     "\n",
-    "Often, we want to compute functions of that matrix; like $e^{-iAt}$ for simulating physics (Hamiltonians), or $A^{-1}$ for solving linear systems, or even applying step-functions or the gaussian as a filter for ground-state preparation. \n",
+    "Often, we want to compute functions of that matrix; like $e^{-iAt}$ for simulating dynamics (Hamiltonians), or $A^{-1}$ for solving linear systems, or even applying step functions or Gaussian functions as a filter for ground-state preparation. \n",
     "\n",
-    "Classically, if you have a number $x$, you can calculate $f(x)$ using a Taylor series or a polynomial approximation. In quantum computing, we can actually do the same thing by using an approach called [Quantum Signal Processing (QSP)](https://dspace.mit.edu/handle/1721.1/115025). This will be covered towards the end of this tutorial. To get there, we first need to learn how to use the BlockEncoding class to transform into a \"Quantum Walk\" via Qubitization.\n",
+    "Classically, to evaluate a complex function $f(x)$, we often approximate $f$ using a polynomial—such as a Taylor series or Chebyshev expansion over a specific domain. In quantum computing, we can perform a similar functional transformation using [Quantum Signal Processing (QSP)](https://dspace.mit.edu/handle/1721.1/115025), which allows us to apply polynomial transformations to the eigenvalues of a quantum operator. We will cover QSP toward the end of this tutorial. To get there, we first need to learn how to use the [BlockEncoding class](../../../reference/Block%20Encodings/BlockEncoding.rst) to transform an operator into a \"Quantum Walk\" via Qubitization.\n",
     "\n",
     "After learning about Qubitization, this tutorial will also explain how to block-encode [Chebyshev polynomials](https://en.wikipedia.org/wiki/Chebyshev_polynomials) and why they are useful. Namely, we'll cover the [quantum Lanczos method](https://quantum-journal.org/papers/q-2023-05-23-1018/pdf/), a technique that uses the Krylov subspace (built from Chebyshev polynomials) to estimate the ground state energy of a Hamiltonian without needing complex time-evolution. We will also cover the [Childs-Kothari-Somma (CKS) algorithm](https://arxiv.org/pdf/1511.02306), which is a near-optimal linear system solver that uses block encoded Chebyshev polynomials in another layer of LCU, this time with a neat (spoiler alert: unary encoding) trick.\n",
     "\n",
@@ -27,7 +27,7 @@
     "| [.inv(eps, kappa)](../../../reference/Block%20Encodings/methods/inv.rst) | Solves the [linear system](https://arxiv.org/pdf/2411.02522) $Ax = b$ | $1/x$ polynomial approximation |\n",
     "| [.sim(t, N)](../../../reference/Block%20Encodings/methods/sim.rst) | Simulates Hamiltonian evolution $e^{-iHt}$ | Jacobi-Anger expansion (Bessel functions) |\n",
     "\n",
-    "But first thing's first. Let's break down the concept called qubitization."
+    "But first things first. Let's break down the concept called qubitization."
    ]
   },
   {
@@ -46,11 +46,11 @@
     "\n",
     "![Alt text](qubitization.png)\n",
     "\n",
-    "In the previous tutorial you've already learned how we use the $\\text{SELECT}$ by just calling [qswitch](../../../reference/Primitives/qswitch.rst). Well, what if we told you that performing the reflection operation above you can just use the [reflection](../../../reference/Primitives/reflection.rst) function? Yup, that's the cool thing about modular software development approach Qrisp is taking with its focus on high-level abstractions. Let's get to coding!\n",
+    "In the previous tutorial you've already learned how we use the $\\text{SELECT}$ by just calling [q_switch](../../../reference/Primitives/qswitch.rst). Well, what if we told you that performing the reflection operation above you can just use the [reflection](../../../reference/Primitives/reflection.rst) function? And by combining the two you can easily define the qubitization walk operator? Yup, that's the cool thing about modular software development approach Qrisp is taking with its focus on high-level abstractions. Let's get to coding!\n",
     "\n",
     "### Qubitization in Qrisp as [.qubitization()](../../../reference/Block%20Encodings/methods/qubitization.rst)\n",
     "\n",
-    "While understanding the internal mechanics of q_switch and reflection is valuable for intuition, Qrisp abstracts this complexity away for standard operations. The [BlockEncoding class](../../../reference/Block%20Encodings/BlockEncoding.rst) features a dedicated method, [.qubitization()](../../../reference/Block%20Encodings/methods/qubitization.rst), which automatically constructs the walk operator $W$ from your input matrix. This method handles the heavy lifting: it identifies the necessary reflection operators $R$ and interleaves them with the signal oracle (the block-encoding unitary $U$). If the original block-encoding unitary $U$ isn't Hermitian (i.e., $U^2 \\neq \\mathbb{1}$), Qrisp automatically handles the Hermitian embedding; often requiring one additional ancilla qubit. To ensure the walk operator remains unitary.\n",
+    "While understanding the internal mechanics of [q_switch](../../../reference/Primitives/qswitch.rst) and [reflection](../../../reference/Primitives/reflection.rst) is valuable for intuition, Qrisp abstracts this complexity away for standard operations. The [BlockEncoding class](../../../reference/Block%20Encodings/BlockEncoding.rst) features a dedicated method, [.qubitization()](../../../reference/Block%20Encodings/methods/qubitization.rst), which automatically constructs the walk operator $W$ from your input matrix. This method handles the heavy lifting: it identifies the necessary reflection operators $R$ and interleaves them with the signal oracle (the block-encoding unitary $U$). If the original block-encoding unitary $U$ isn't Hermitian (i.e., $U^2 \\neq \\mathbb{1}$), Qrisp automatically handles the Hermitian embedding by often requiring one additional ancilla qubit. This is the cost of ensuring the walk operator remains unitary.\n",
     "\n",
     "Here is how you can transform a Hamiltonian into its qubitized walk operator in just a few lines:"
    ]
@@ -85,19 +85,19 @@
    "source": [
     "The resulting object, ``BE_walk``, is a new [BlockEncoding](../../../reference/Block%20Encodings/BlockEncoding.rst) instance representing the walk operator $W$. A thing to remember from this example is the fact that when you invoke methods of the [BlockEncoding](../../../reference/Block%20Encodings/BlockEncoding.rst) class like [.qubitization](../../../reference/Block%20Encodings/methods/qubitization.rst), or later [.poly](../../../reference/Block%20Encodings/methods/poly.rst) and [.sim](../../../reference/Block%20Encodings/methods/sim.rst), Qrisp qubitizes your BlockEncoding object under the hood, handling the ancilla management and reflection logic for you, abstracting away the need to know how to implement these methods as (trigger warning) circuits.\n",
     "\n",
-    "Crucially, the [.qubitization](../../../reference/Block%20Encodings/methods/qubitization.rst) operator is also how one encodes the Chebyshev polynomials of the Hamiltonian, as we'll learn in the next part of the tutorial. \n",
+    "Crucially, the [.qubitization()](../../../reference/Block%20Encodings/methods/qubitization.rst) operator is also how one encodes the Chebyshev polynomials of the Hamiltonian, as we'll learn in the next part of the tutorial. \n",
     "\n",
     "## Block encoding Chebyshev polynomials\n",
     "One of the most powerful features of Qubitization is its natural relationship with Chebyshev polynomials of the first kind, $T_k(x)$, defined as $T_k(\\cos \\theta) = \\cos(k\\theta)$. If we apply the walk operator $W$ $k$-times, the resulting unitary $W^k$ contains $T_k(A/\\alpha)$ block encoded in the top-left block:\n",
     "$$(\\bra{G} \\otimes \\mathbb{1}) W^k (\\ket{G} \\otimes \\mathbb{1}) = T_k(A/\\alpha).$$\n",
     "\n",
-    "\"But what's so special about Chebyshev polynomials\", you might be wondering. As noted in Lin Lin’s lecture notes, Chebyshev polynomials are \"optimal\" in two senses:\n",
+    "\"But what's so special about Chebyshev polynomials?\", you might be wondering. As noted in Lin Lin’s lecture notes, Chebyshev polynomials are \"optimal\" in two senses:\n",
     "\n",
     "- Iterative Efficiency: Because $W$ is a single unitary, applying $W^k$ requires only $k$ queries to the block encoding. This is much cheaper than the $O(2^n)$ terms often required by naive Taylor series expansions.\n",
     "\n",
     "- Approximation Theory: According to the Chebyshev Equioscillation Theorem, $T_k(x)$ provides the best uniform approximation to a function over the interval $[-1, 1]$. This ensures that our quantum algorithm achieves the desired precision $\\epsilon$ with the minimum possible quantum resources.\n",
     "\n",
-    "we think that, again, some visual aid is needed. By applying the [.qubitization](../../../reference/Block%20Encodings/methods/qubitization.rst) operator $k$ times, we block encode the $k$-th Chebyshev polynomial of the first kind $T_k$. If you apply $W^k=(RU)^k$ $k$ times, you get $T_k$ block encoded. Do it once, $k=1$, you get the top left figure. Do it twice ($k=2$), you block-encode $T_2$ (top right figure). Do it $k=5$ times... yup, you guessed it (bottom right figure):\n",
+    "we think that, again, some visual aid is needed. By applying the [.qubitization()](../../../reference/Block%20Encodings/methods/qubitization.rst) operator $k$ times, we block encode the $k$-th Chebyshev polynomial of the first kind $T_k$. If you apply $W^k=(RU)^k$ $k$ times, you get $T_k$ block encoded. Do it once, $k=1$, you get the top left figure. Do it twice ($k=2$), you block-encode $T_2$ (top right figure). Do it $k=5$ times... yup, you guessed it (bottom right figure):\n",
     "\n",
     "![Alt text](cheb_poly.png)\n",
     "\n",
@@ -241,7 +241,7 @@
     "As detailed in the paper [Exact and efficient Lanczos method on a quantum computer](https://arxiv.org/pdf/2208.00567), these polynomials are used to construct what is known as a Krylov subspace. By applying different orders of $T_k$ to an initial state, we can \"scan\" the spectrum of a Hamiltonian without performing expensive real or imaginary time evolution.\n",
     "\n",
     "To put it in a more digestible way, the Lanczos method projects the Hamiltonian into a much smaller, manageable subspace. We construct a projected Hamiltonian matrix $\\mathbf{H}$ and an overlap matrix $\\mathbf{S}$ within this subspace. The matrix elements are defined as:\n",
-    "$$S_{ij} = \\bra{\\psi_0} T_i(H) T_j(H) \\ket{\\psi_0} = \\bra{ketT_i(H)T_j(H)}_0$$\n",
+    "$$S_{ij} = \\bra{\\psi_0} T_i(H) T_j(H) \\ket{\\psi_0} = \\braket{T_i(H)T_j(H)}_0$$\n",
     "$$H_{ij} = \\bra{\\psi_0} T_i(H) H T_j(H) \\ket{\\psi_0} = \\braket{T_i(H)HT_j(H)}_0$$\n",
     "\n",
     "Using the product identities of Chebyshev polynomials, these can be broken down into linear combinations of simple expectation values $\\braket{T_k(H)}_0$.\n",
@@ -333,13 +333,9 @@
     "The unary encoding trick is a neat one, that's for sure. It constructs a unary state (instead of the usual $\\text{PREP}$ we use in usual LCU), which allows only for one control instead of the usual [qswitch](../../../reference/Primitives/qswitch.rst) one.\n",
     "\n",
     "Here is the state in maths:\n",
-    "$$\\ket{\\text{unary}} \\propto\n",
+    "$$\\ket{\\text{unary}} \\propto \\sqrt{\\alpha_1}\\ket{100\\dots00} + (-1) \\sqrt{\\alpha_3}\\ket{110\\dots00} + (-1)^2 \\sqrt{\\alpha_5}\\ket{111\\dots00} +\\cdots + (-1)^{j_0-1}\\sqrt{\\alpha_{2j_0-1}}\\ket{111\\dots10} +(-1)^{j_0}\\sqrt{\\alpha_{2j_0+1}}\\ket{111\\dots11}.$$\n",
     "\n",
-    "        \\sqrt{\\alpha_1}\\ket{100\\dots00} + (-1) \\sqrt{\\alpha_3}\\ket{110\\dots00} + (-1)^2 \\sqrt{\\alpha_5}\\ket{111\\dots00} +\n",
-    "\n",
-    "        \\cdots + \\sqrt{\\alpha_3}\\ket{110\\dots00} +(-1)^{j_0}\\sqrt{\\alpha_{2j_0+1}}\\ket{111\\dots11}.$$\n",
-    "\n",
-    "The negative sign we handle by applying $Z$ gates to the outer ancillary variable. When such superposition is prepared, the first state, $\\ket{100\\dots00}$, corresponding to $\\alpha_1$, \"activates\" only the first unitary, ergo $T_1(A)$ (top left in figure below). The second unary part of the unary superposition, \"\\ket{110\\dots00}\", corresponding to $\\alpha_3$ activates the $T_3(A)$ (top right in figure below). Same thing for $\\ket{111\\dots00}$ (bottom left in figure below), and so on until $k=2j_0+1$ (bottom right in figure below), where $j_0$ is the truncation order from the initial CKS paper,where all of the $(RU)^k$ \"light up\". ATime for the \"figure below\" promised above:\n",
+    "We handle the negative signs of the coefficients $\\alpha_k$ by applying $Z$ gates to the outer ancillary variable. When such superposition is prepared, the first state, $\\ket{100\\dots00}$, corresponding to $\\alpha_1$, \"activates\" only the first unitary, i.e. $T_1(A)$ (top left in figure below). The second unary part of the unary superposition, \"\\ket{110\\dots00}\", corresponding to $\\alpha_3$ activates the $T_3(A)$ (top right in figure below). Same thing for $\\ket{111\\dots00}$ (bottom left in figure below), and so on until $k=2j_0+1$ (bottom right in figure below), where $j_0$ is the truncation order from the initial CKS paper,where all of the $(RU)^k$ \"light up\". Here is the \"figure below\" promised above:\n",
     "\n",
     "![Alt text](unary_magic.png)\n",
     "\n",
@@ -347,11 +343,11 @@
     "\n",
     "\"But wait!\", you might think. \"I know another, more famous algorithm for solving linear systems under the name HHL. Why use CKS over that algorithm?\"\n",
     "\n",
-    " Precision. The complexity of CKS scales as $\\mathcal{O}(\\text{polylog}(1/\\epsilon))$, representing an exponentially better precision scaling compared to HHL. This makes it feasible to get high-accuracy solutions without an explosion in circuit depth. As we will see later, utilizing (foreshadowing again here) QSP/GQSP. You'll learn about this later, as well as how to use this, even more efficient approach, by simply calling the [.inv(eps, kappa)](../../../reference/Block%20Encodings/methods/inv.rst) method. How sick, right?!\n",
+    "Precision. The complexity of CKS scales as $\\mathcal{O}(\\text{polylog}(1/\\epsilon))$, representing an exponentially better precision scaling compared to HHL. This makes it feasible to get high-accuracy solutions without an explosion in circuit depth. As we will see later, utilizing (foreshadowing again here) QSP/GQSP. You'll learn about this later, as well as how to use this even more efficient approach, by simply calling the [.inv(eps, kappa)](../../../reference/Block%20Encodings/methods/inv.rst) method. How sick, right?!\n",
     "\n",
-    " Oh, and $\\epsilon$ here is (as already mentioned) the precision, with $\\kappa$ being the condition number. The higher the $\\kappa$, the more difficult is to solve the linear system. The higher the $\\epsilon$, the more terms in the Chebyshev approximation, resulting in costing more resources.\n",
+    "Oh, and $\\epsilon$ here is (as already mentioned) the precision, with $\\kappa$ being the condition number. The higher the $\\kappa$, the more difficult is to solve the linear system. The higher the $\\epsilon$, the more terms in the Chebyshev approximation, resulting in costing more resources.\n",
     "\n",
-    "Time for an example. In Qrisp, the CKS function takes a Block Encoding of matrix $A$ and returns a new Block Encoding representing $A^{-1}$. You can then apply this inverted operator to your state $\\ket{b}$ using the Repeat-Until-Success (RUS) protocol. Here is how to solving a 4x4 Hermitian system:"
+    "Time for an example. In Qrisp, the CKS function takes a Block Encoding of matrix $A$ and returns a new Block Encoding representing $A^{-1}$. You can then apply this inverted operator to your state $\\ket{b}$ using the Repeat-Until-Success (RUS) protocol. Here is how to solve a 4x4 Hermitian system:"
    ]
   },
   {
