Addressed Raphael's review comments for BE_vol2.

--- a/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "Given a Hermitian matrix $H$ and its block-encoding $(U, G)$, where $G\\ket{0} = \\ket{G}$, we use the definition of the reflection operator $R$ acting on the ancilla space as $R = (2\\ket{G}\\bra{G}_a \\otimes \\mathbb{1}_a)\\otimes \\mathbb{1}_{s}$ from [Lemma 1 in Exact and efficient Lanczos method on a quantum computer](https://arxiv.org/pdf/2208.00567). To \"qubitize\" the encoding, we interleave the SELECT operator with this reflection. The Qubitized Walk Operator $W$ is defined as $W = \\text{SELECT}\\cdot R$.\n",
     "\n",
-    "Rigorous analysis (see [Lin Lin, Chapter 8](https://arxiv.org/pdf/2201.08309)) shows that if $\\ket{\\psi_\\lambda}$ is an eigenvector of $H/\\alpha$ with eigenvalue $\\lambda \\in [-1, 1]$, the operator $W$ acts on a 2D subspace spanned by $\\ket{G}\\ket{\\psi_\\lambda}$ and its orthogonal complement $\\ket{\\perp}$. Within this subspace, the eigenvalues of $W$ are $\\mu_\\pm = \\lambda \\pm i\\sqrt{1-\\lambda^2} = e^{\\pm i \\arccos(\\lambda)}$. Essentially, Qubitization \"lifts\" the eigenvalues of our matrix onto the unit circle in the complex plane, allowing us to manipulate them using phase rotations.\n",
+    "Rigorous analysis (see [Lin Lin, Chapter 8](https://arxiv.org/pdf/2201.08309)) shows that if $\\ket{\\psi_\\lambda}$ is an eigenvector of $H/\\alpha$ with eigenvalue $\\lambda \\in [-1, 1]$, the walk operator $W$ doesn't wander through the whole Hilbert space. Instead, it acts on an invariant 2D subspace spanned by the \"ideal\" state $\\ket{G}\\ket{\\psi_\\lambda}$ and its orthogonal complement $\\ket{\\perp}$ (a very high dimensional vector space, and not a single vector). Within this subspace, the eigenvalues of $W$ are $\\mu_\\pm = \\lambda \\pm i\\sqrt{1-\\lambda^2} = e^{\\pm i \\arccos(\\lambda)}$. Essentially, Qubitization \"lifts\" the eigenvalues of our matrix onto the unit circle in the complex plane, allowing us to manipulate them using phase rotations.\n",
     "\n",
     "This seems like a mouthful, but in order for this tutorial to cater to both developers coming from the classical domain, as well as researchers in quantum computing, it's the \"necessary evil\". To make it up to you, we're going to show how in Qrisp, you don't need to build these reflections manually. But first, some visual aid so that you see that it's not as complex as it sounds.\n",
     "\n",
@@ -330,7 +330,7 @@
     "\n",
     "![Alt text](BE_CKS.png)\n",
     "\n",
-    "The unary encoding trick is a neat one, that's for sure. It constructs a unary state (instead of the usual $\\text{PREP}$ we use in usual LCU), which allows only for one control instead of the usual [qswitch](../../../reference/Primitives/qswitch.rst) one.\n",
+    "The unary encoding trick is a neat one, that's for sure. It constructs a unary state (instead of the usual $\\text{PREP}$ in binary encoding that we use in usual LCU), which allows only for one control instead of our qrispy [q_switch](../../../reference/Primitives/qswitch.rst) one.\n",
     "\n",
     "Here is the state in maths:\n",
     "$$\\ket{\\text{unary}} \\propto \\sqrt{\\alpha_1}\\ket{100\\dots00} + (-1) \\sqrt{\\alpha_3}\\ket{110\\dots00} + (-1)^2 \\sqrt{\\alpha_5}\\ket{111\\dots00} +\\cdots + (-1)^{j_0-1}\\sqrt{\\alpha_{2j_0-1}}\\ket{111\\dots10} +(-1)^{j_0}\\sqrt{\\alpha_{2j_0+1}}\\ket{111\\dots11}.$$\n",
@@ -437,12 +437,14 @@
    "source": [
     "## Quantum Signal Processing (QSP)\n",
     "\n",
-    "While LCU and Qubitization allows us to block-encode operators and Chebyshev polynomials $T_k$;the latter by simply repeating a walk operator $W=RU$, Quantum Signal Processing (QSP) provides a way to implement arbitrary polynomial transformations $P(A)$.\n",
+    "While LCU and Qubitization allows us to block-encode operators and Chebyshev polynomials $T_k$; the latter by simply repeating a walk operator $W=RU$, Quantum Signal Processing (QSP) provides a way to implement nearly any arbitrary polynomial transformations $P(A)$. You might wonder: \"Why go through the trouble of encoding a number $x$ into an operator just to evaluate a polynomial? A calculator can do that.\". \n",
     "\n",
-    "At its core, QSP manipulates a single-qubit \"signal\" using a sequence of rotations. If we have a signal operator $W(x)$ that encodes some value $x \\in [-1, 1]$, and we interleave it with a series of phase shifts $e^{i\\phi_j Z}$, the resulting product of unitaries can be written as:\n",
-    "$$U_\\Phi(x) = e^{i\\phi_0 Z} \\prod_{j=1}^d W(x) e^{i\\phi_j Z}$$\n",
+    "The power of QSP lies in the fact that $x$ actually represents the eigenvalues of a large, block-encoded operator $A$. By finding a way to transform the scalar $x$, we can simultaneously apply that same transformation to the entire operator $A \\rightarrow P(A)$, a task that is computationally impossible for a classical calculator when $A$ is a $2^n \\times 2^n$ matrix.\n",
     "\n",
-    "Through a clever choice of the phase angles $\\{\\phi_0, \\phi_1, \\dots, \\phi_d\\}$, the block-encoding (top left block) of this unitary becomes a polynomial $P(x)$. \n",
+    "At its core, QSP manipulates a single-qubit \"signal\" using a sequence of rotations. If we have $2\\times 2$ signal operator $W(x)$ that encodes some value $x \\in [-1, 1]$, we interleave it with a series of phase shifts $e^{i\\phi_j Z}$, the resulting product of unitaries can be written as:\n",
+    "$$U_\\Phi(x) = e^{i\\phi_0 Z} \\prod_{j=1}^d W(x) e^{i\\phi_j Z}.$$\n",
+    "\n",
+    "Through a clever choice of the phase angles $\\{\\phi_0, \\phi_1, \\dots, \\phi_d\\}$, the block-encoding (top left block) of this unitary becomes a polynomial $P(x)$. When we \"lift\" this logic from a single qubit to a full quantum variable this 1-qubit rotation sequence effectively applies the polynomial $P$ to every eigenvalue of your Hamiltonian or matrix at once.\n",
     "\n",
     "The Fundamental Theorem of QSP states that there exists a set of phase angles $\\{\\phi_0, \\dots, \\phi_d\\}$ such that the top-left block of $U_\\Phi$ corresponds to a polynomial $P(A/\\alpha)$ where:\n",
     "\n",
@@ -452,7 +454,7 @@
     "\n",
     "- $|P(x)| \\leq 1$ for all $x \\in [-1, 1]$\n",
     "\n",
-    "I know, I know, this was quite a lot of theory, but as usually, we're here to make things simple with Qrisp. We have made it possible for you to not even worry worry about the classical math of finding these angles! Obtaining them involves some heavy Laurent series and optimization already included in Qrisp as an an internal \"angle solver\" that handles this \"classical nightmare\" for you. You can therefore treat these complex mathematical transformations as simple method calls!\n",
+    "I know, I know, this was quite a lot of theory, but as always, we're here to make things simple with Qrisp. We have made it possible for you to not even worry worry about the classical math of finding these phase angles! Qrisp includes an internal \"angle solver\", which allows you to treat these sophisticated mathematical transformations as simple method calls!\n",
     "\n",
     "As a final point of emphasis here, the main advantage of QSP lies in its optimality: it can approximate any continuous function to within error $\\epsilon$ using a circuit depth that scales nearly linearly with the complexity of the function, meeting the theoretical lower bounds for quantum query complexity.\n",
     "\n",
@@ -472,6 +474,8 @@
     "To visualize this, the following circuit schematics can help.\n",
     "\n",
     "![Alt text](BE_QSVT.png)\n",
+    "\n",
+    "You might be saying to yourself: \"The picture is confusing to me. In the formula for $U_\\Phi$ only $U$ and $\\Pi$ appear, but at no point $\\ket{b}$, or $\\ket{G}$?!\". What a great question you brewed there! The answer might suprise you, but it's mostly the notation used in literature. In the algorithm schematics above we have explicitly shown the $\\ket{G}$ and $\\bra{G}$ parts sandwiching $U$. In literature, it is often assumed, that this trio of unitaries collectively is labeled as $U$: $U\\rightarrow (\\bra{G}\\otimes \\mathbb{I})U(\\ket{G}\\otimes \\mathbb{I})$. As for the state $\\ket{b}$, this is just our operand we're applying the QSVT to.\n",
     "\n",
     "As promised above, you don't even need to care about these angles with our crispy clean implementation. Generalizing QSP is the final piece of this mosaic.\n",
     "\n",
@@ -793,7 +797,7 @@
    "id": "e95d77fd",
    "metadata": {},
    "source": [
-    "And this, ladies and gentlemen interested in block encodings, is how state-of-the-art quantum resource estimation is done. Simple, huh?\n",
+    "And this, ladies and gentlemen interested in block encodings, is how quantum resource estimation is done, simply and efficiently!\n",
     "\n",
     "Oh, and a comment on the results: CKS ain't too shabby afterall! This is why, fellow readers, you should always do your due diligence and perform analysis of the resources. \"Big O\" notation can be misleading because it ommits the scaling factors. Well, in this case the results were actually expected because the circuits are extremely similar. But still, estimate your quantum resources!"
    ]
